# vae-comparison

./: cnn-vae.ipynb  install.sh  nb.ipynb  pyproject.toml  requirements.txt  vae.ipynb
src/: data.py  inference.py  interface.py  nb.ipynb  todo  train.py  vae.py
src/.ipynb_checkpoints/: train-checkpoint.py
