[project]
name = "vae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "einops>=0.8.0",
    "matplotlib>=3.9.3",
    "gradio>=3.36.1",
    "numpy==1.26.4",
    "pillow>=11.0.0",
    "torch>=2.5.1",
    "ipykernel>=6.29.5",
    "torchvision>=0.20.1",
    "ipywidgets>=8.1.5",
    "tqdm>=4.67.1",
    "scikit-learn>=1.6.0",
]
